Improvements (#50)
* Added Transactional logic to Shipment and Invoice service.

The update method calls create a temporary object and perform operations on it.
Once it is ready, the existing object is overriden with these properties and saves

* Renamed ShipmentItem to Material Lot

* Changed the MaterialLot to support InvoiceItem

* Changed the container names

* Added Storage location to Material lots

* Fixed the copyToNull method

* Replaced the Quantity, Money, Freight and Tax tables with embedded entities

* Replaced the usage of hard coded strings with the property constants

* Added column names for the audited fields

* Refactored the controller and constructors

* Added the Unit tests and fixed the code

* Added mapper ignores

* Added Repo config

* Added mapper unit tests

* Added the attribute overrides

* Fixed SQL

* Added shipment mapper tests

* Hibernate bug fixes

* Status refactor

* Fixed Shipment and Material Lot setters

* Hibernate bugs

* Code review changes